Added item tag for items unable to accept the soulbound enchantment